fix overflow issue and big boxes also svc.css

--- a/svc.css
+++ b/svc.css
@@ -9,8 +9,12 @@
     scroll-behavior: smooth;
     font-family: 'Poppins', sans-serif;
 }
+html{
+  scroll-behavior: smooth !important ;
+}
 :root{
     --text-color:#fff;
+    
     --main-color:#ff9100;
     --second-color:#858585;
     --bg-color:#1e1c2a;
@@ -25,7 +29,7 @@
 }
 
 
-.partner{
+ .partner{
  
   width: 960px;
   height: 310px;
@@ -35,8 +39,9 @@
   cursor: pointer;
   margin-top: 50px;
   overflow: hidden;
+  margin-left: 250px;
   
-}
+} 
 .partner img{
   height: 70px;
 }
@@ -62,6 +67,11 @@
 body{
     background-color: var(--bg-color);
     color: var(--text-color);
+    width: 100%;
+    background-size: 1600px;
+    background-repeat: no-repeat;
+    overflow-x: hidden;
+    
     
 }
 header{
@@ -160,6 +170,8 @@ section{
 
     display: flex;
     margin-top: 100px;
+    margin-left: 120px;
+    
     
 
 }
@@ -228,6 +240,7 @@ header.sticky{
     margin-bottom: -50px;
 }
 .main-text h3{
+  margin-left: 280px;
   font-size: var(--h2-font);
   margin-bottom: -10px;
 }
@@ -246,7 +259,10 @@ header.sticky{
     align-items:center;
     margin-top: 4rem;
 }
-
+.ag-format-container{
+  width: 1400px;
+  margin: 0 auto;
+}
 .c-mainbox{
 display: flex;
 align-items: center;
@@ -359,6 +375,7 @@ font-size: 23px;
 
 }
 
+
 .contact-content h4{
      font-size: 20px;
      color:yellow;
@@ -408,7 +425,7 @@ margin-bottom: 16px;
     border-radius: 5rem;
 
 }
-@meadia (max-width:1690px){
+@media(max-width:1690px){
 
     section{
         padding:70px 2%;
@@ -419,8 +436,9 @@ margin-bottom: 16px;
         transition: .2s;
     }
     header.sticky{
+      height: 80px;
         padding:8px 2%;
-        transiton: .2s;
+        transition:0.2s;
     }
     .contact{
         padding:70px 2%;
@@ -428,7 +446,10 @@ margin-bottom: 16px;
     }
 }
 
-@meadia (max-width:1690px){
+@media (max-width:1690px){
+  .main-text{
+    color: var(--second-color);
+  }
 
     section{
         padding:70px 2%;
@@ -442,32 +463,26 @@ margin-bottom: 16px;
     }
     }
 
-    @meadia(max-width:880px){
+    /* @media(max-width:880px){
         #menu-icon{
             display:block;
 
         }  
-        .navbar{
-            position:absolute;
-            top:100%;
-            right:0;
-            width:250px;
-            height: 110vh;
-            background:#fff;
-            display:flex;
-            flex-direction:column;
-            align-items:center;
-            padding:180px 40px;
-            transition:all .38s ease;
+        .menu-container{
+          display: grid;
+          grid-template-columns: repeat(auto-fit,minmax(160px,auto));
+      gap: 1rem;
+       align-items: center;
+       margin-top: 4rem;
+       cursor: pointer;
         }
-        .navbar a{
-            display:block;
-            margin:1.3rem; 
-        }
-        .navbar.open{
-            right:0;
-        }
-        }
+        .row img{
+          width: 100%;
+          height: 150px;
+          border-radius: 10px;
+       }
+       
+        } */
 
         @media (max-width: 820px){
             :root{
@@ -475,6 +490,16 @@ margin-bottom: 16px;
                 --h2-font:1.8rem;
              transition: .2s;
             }
+            .container-box{
+              display: grid;
+              grid-template-columns: repeat(auto-fit, minmax(50px,auto));
+              gap: 2rem;
+              align-items:center;
+              margin-top: 4rem;
+          }
+          
+          
+            
             .home{
                 grid-template-columns: 1fr;
                 height:114vh;
@@ -506,38 +531,35 @@ margin-bottom: 16px;
                 width: 100%;
             }
         }
-
-
-
-        /* animation */
-      
-        .ag-format-container {
-            width: 1142px;
+        /* section{
+          padding:70px 2%;
+          transition: .2s;
+      } */
+     .ag-format-container {
+            width: 1400px;
             margin: 0 auto;
-            
+            /* margin-left: 70px; */
+              
           }
-        
-          
-          /* body {
-            background-color: #000;
-          } */
-          .ag-courses_box {
+         .ag-courses_box {
             display: -webkit-box;
             display: -ms-flexbox;
             display: flex;
             -webkit-box-align: start;
-            -ms-flex-align: start;
-            align-items: flex-start;
+            -ms-flex-align: center;
+            align-items: center;
             -ms-flex-wrap: wrap;
             flex-wrap: wrap;
+          width: 1100px;
+            padding: 20px 0;
+            margin-left: 18%;
           
-            padding: 50px 0;
           }
           .ag-courses_item {
-            -ms-flex-preferred-size: calc(33.33333% - 30px);
-            flex-basis: calc(33.33333% - 30px);
-          
-            margin: 0 15px 30px;
+            /* -ms-flex-preferred-size: calc(10.33333% - 10px);
+            flex-basis: calc(33.33333% - 120px); */
+          width: 210px;
+            margin: 20px 15px 20px;
           
             overflow: hidden;
           justify-items: center;
@@ -593,8 +615,8 @@ margin-bottom: 16px;
             transition: color .5s ease
           }
           .ag-courses-item_bg {
-            height: 128px;
-            width: 128px;
+            height: 150px;
+            width: 140px;
             background-color: #f9b234;
           
             z-index: 1;
@@ -603,7 +625,6 @@ margin-bottom: 16px;
             right: -75px;
           
             border-radius: 50%;
-          
             -webkit-transition: all .5s ease;
             -o-transition: all .5s ease;
             transition: all .5s ease;
@@ -626,7 +647,7 @@ margin-bottom: 16px;
           
           
           
-          @media only screen and (max-width: 979px) {
+          /* @media only screen and (max-width: 979px) {
             .ag-courses_item {
               -ms-flex-preferred-size: calc(50% - 30px);
               flex-basis: calc(50% - 30px);
@@ -634,18 +655,26 @@ margin-bottom: 16px;
             .ag-courses-item_title {
               font-size: 24px;
             }
-          }
+          } */
           
-          @media only screen and (max-width: 767px) {
+          /* @media only screen and (max-width: 767px) {
             .ag-format-container {
               width: 96%;
+             
             }
           
-          }
+          } */
           @media only screen and (max-width: 639px) {
+            section{
+              padding:70px 2%;
+         transition: .2s;
+            }
+            .main-text{
+              color: var(--second-color);
+            }
             .ag-courses_item {
-              -ms-flex-preferred-size: 100%;
-              flex-basis: 100%;
+              -ms-flex-preferred-size: 90%;
+              flex-basis: 90%;
             }
             .ag-courses-item_title {
               min-height: 72px;
@@ -672,8 +701,8 @@ margin-bottom: 16px;
           
           .card_box {
             justify-content: space-between;
-            width: 200px;
-            height: 250px;
+            width: 180px;
+            height: 220px;
             border-radius: 20px;
             background-image: url(calender\).png);
             background-size: 230px 250px;
@@ -705,6 +734,7 @@ margin-bottom: 16px;
           .main-calender{
             display: flex;
             max-width: 1400px;
+            margin-left: 260px;
            
           }
           
@@ -754,3 +784,4 @@ margin-bottom: 16px;
           }
 
           /* card */
+         
